# firesight-java

./: .classpath  .cproject  .gitignore  .project  CMakeLists.txt  pom.xml
cmake/Modules/: FindFireSight.cmake
src/main/cpp/: CMakeLists.txt  nativeUtil.h  org_firepick_firesight_FireSight.cpp  org_firepick_firesight_FireSight.h  org_firepick_firesight_HoleRecognizer.cpp  org_firepick_firesight_HoleRecognizer.h  org_firepick_firesight_HoughCircle.cpp  org_firepick_firesight_HoughCircle.h  org_firepick_firesight_MatchedRegion.cpp  org_firepick_firesight_MatchedRegion.h  org_firepick_firesight_NativeObject.cpp  org_firepick_firesight_NativeObject.h
src/main/java/org/firepick/firesight/: Circle.java  FireSight.java  HoleRecognizer.java  HoughCircle.java  MatchedRegion.java  NativeObject.java  OpenCvUtils.java
src/main/java/org/firepick/firesight/utils/: OpenCvUtils.java  SharedLibLoader.java  TemporaryDirectory.java
src/main/resources/: log4j.xml
src/test/java/org/firepick/firesight/: TestAbsDiff.java  TestHoleRecognizer.java  TestHoughCircle.java  TestPipelineAccess.java
src/test/resources/: log4j.xml
